landing page is fixed, spline model is now aligned with the text

--- a/frontend/src/pages/LandingPage.css
+++ b/frontend/src/pages/LandingPage.css
@@ -46,8 +46,6 @@
     }
 }
 
-.spline-container canvas {
-    position: absolute;
-    top: 20%;
-    left: 20%
+.spline-model-component{
+    margin-bottom: 100px;
 }
